--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,121 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+html, body{
+  height: 100%;
+}
+body{
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  /* background: linear-gradient(220.55deg, #DD7BFF 0%, #FF6C6C 100%); */
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #8A88FB, #D079EE);
+	background-size: 400% 400%;
+	animation: gradient 20s ease infinite;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+
+  
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1{
+  text-align: center;
+  margin-bottom: 1em;
+  color: #fff;
 }
+
+p{
+  text-align: center;
+  margin-bottom: 0.5em;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #fff;
+  padding-bottom: 20px;
+}
+.container{
+  height: 480px;
+  width: 480px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  gap: 1em;
+}
+
+.card{
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  transform: rotateY(180deg);
+  animation: 2s hideCard linear;
+  transition: transform 0.5s;
+}
+@keyframes hideCard{
+  0%, 70%{
+    transform: rotateY(0);
+  }
+  100%{
+    transform: rotateY(180deg);
+  }
+}
+.card img{
+  max-width: 100%;
+  max-height: 100%;
+  transition: transform 0.5s;
+  transform: scale(0);
+  animation: 2s hideImage linear;
+}
+@keyframes hideImage{
+  0%, 70%{
+    transform: scale(1);
+  }
+  100%{
+    transform: scale(0);
+  }
+}
+
+.card.active{
+  transform: rotateY(0);
+}
+.card.correct{
+  background-color: #97E8B5;
+}
+.card.wrong{
+
+  background-color: #FF3F3F;
+}
+.card.active img{
+  transform: scale(1);
+}
+
+
+@media screen and (max-device-width: 599px), screen and (max-width: 599px) {
+		  
+  .container {
+    height: 300px;
+    width: 300px;
+    padding: 1rem;
+    gap: 0.3rem;
+    margin: 0 auto;
+  }
+
+  h1{
+    font-size: 1.2rem;
+  }
+		 
+}
+
+
