--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,29 @@ p{
   transform: scale(1);
 }
 
+.modal {
+  max-width: 400px;
+  box-shadow: 0 4px 14px 0 rgb(0 0 0 / 50%);
+  max-height: 200px;
+  min-width: 300px;
+  min-height: 150px;
+  margin: 0 auto;
+  padding: 40px 20px;
+
+background: white;
+border-radius: 10px;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+text-align: center;
+}
+
+.modal h2 {
+  color: #444;
+ 
+}
+
 
 @media screen and (max-device-width: 599px), screen and (max-width: 599px) {
 		  
@@ -118,4 +141,17 @@ p{
 		 
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  z-index: 1;
+}
 
+.modal {
+max-width: 200px;
+
+}
