--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ html, body{
 }
 body{
 
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   /* background: linear-gradient(220.55deg, #DD7BFF 0%, #FF6C6C 100%); */
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #8A88FB, #D079EE);
 	background-size: 400% 400%;
